--- a/angular-naturepoints/src/app/app.component.html
+++ b/angular-naturepoints/src/app/app.component.html
@@ -3,6 +3,8 @@
   Nature Points 
   </h1>  
   <button mat-button routerLink="/">Home</button>  
-  <button mat-button routerLink="/about">About</button></mat-toolbar>
+  <button mat-button routerLink="/about">About</button>
+  <button mat-button routerLink="/calculator">The Calculator</button>
+</mat-toolbar>
 
 <router-outlet></router-outlet>
