--- a/angular-naturepoints/src/app/app.component.html
+++ b/angular-naturepoints/src/app/app.component.html
@@ -1,10 +1,12 @@
 <mat-toolbar color="primary">  
   <h1>  
   Nature Points 
-  </h1>  
-  <button mat-button routerLink="/">Home</button>  
-  <button mat-button routerLink="/about">About</button>
+  </h1>
+  <span class="example-spacer"></span>  
+  <button mat-button routerLink="/">Home</button> 
   <button mat-button routerLink="/calculator">The Calculator</button>
+  <button mat-button routerLink="/login">Login</button> 
+  <button mat-button routerLink="/about">About</button>
 </mat-toolbar>
 
 <router-outlet></router-outlet>
