--- a/angular-naturepoints/src/app/app.component.html
+++ b/angular-naturepoints/src/app/app.component.html
@@ -4,7 +4,7 @@
   </h1>
   <span class="example-spacer"></span>  
   <button mat-button routerLink="/">Home</button> 
-  <button mat-button routerLink="/calculator">The Calculator</button>
+  <button mat-button routerLink="/calculator">Calculator</button>
   <button mat-button routerLink="/login">Login</button> 
   <button mat-button routerLink="/about">About</button>
 </mat-toolbar>
