--- a/angular-naturepoints/src/app/about/about.component.html
+++ b/angular-naturepoints/src/app/about/about.component.html
@@ -1,3 +1,10 @@
-<p>about works!</p>
-
-<p style="padding: 15px;"> This is the about page that describes your app</p>
+<br>
+<br>
+<mat-card>
+    <mat-card-title>About Nature Points</mat-card-title>
+<mat-card-content>
+    The Nature Points Web application is really only about two things, YOU and NATURE. Scientific studies have shown that spending some time in nature is beneficial to a person's health. 
+    For many people, our jobs keep us indoors. Then we go home in the evening and watch television. Nature is just outside the door, waiting to boost our mood and give us vitamin D and increase our dopamine levels, yet we don't take advantage of that.
+    Even better, if we can get our kids into nature as it's understood to reduce anxiety, promote problem solving, and improve the immune system. This application's purpose is to remind and encourage people to get outdoors and be active.
+</mat-card-content>
+</mat-card>
