--- a/angular-naturepoints/src/app/home/home.component.html
+++ b/angular-naturepoints/src/app/home/home.component.html
@@ -1,11 +1,14 @@
 <br>
 <br>
-<mat-card-content>
-    Welcome to the website for the Nature Points calculator. Feel your best! 
+<mat-card>
+    <mat-card-title>Welcome!</mat-card-title>
+    <mat-card-content>
+        Welcome to the website for the Nature Points calculator. Feel your best! 
     
-    Studies have shown that exposure to nature benefits one's health both emotionally and physically. It reduces feelings of anger, fear, and stress. And it increases pleasant feelings.
-    It's also shown to reduce heart rate, blood pressure, muscle tension, and the production of stress hormones. This website is dedicated to helping you take advantage of what's just outside the door, nature.
-    On the next page you will find an application that you can use to count what we call "nature points." Make it your goal to reach 100 points a week! 
+        Studies have shown that exposure to nature benefits one's health both emotionally and physically. It reduces feelings of anger, fear, and stress. And it increases pleasant feelings.
+        It's also shown to reduce heart rate, blood pressure, muscle tension, and the production of stress hormones. This website is dedicated to helping you take advantage of what's just outside the door, nature.
+        On the next page you will find an application that you can use to count what we call "nature points." Make it your goal to reach 100 points a week! 
    
-    Version 2.0 now allows you to track your year-to-date point total. 
-</mat-card-content>
+        Version 2.0 now allows you to track your year-to-date point total. 
+    </mat-card-content>
+</mat-card>
