--- a/angular-naturepoints/src/app/home/home.component.html
+++ b/angular-naturepoints/src/app/home/home.component.html
@@ -11,4 +11,5 @@
    
         Version 2.0 now allows you to track your year-to-date point total. 
     </mat-card-content>
+    <img mat-card-image src="images/backpacking.jpg" alt="Photo of a backpacker">
 </mat-card>
