--- a/angular-naturepoints/src/app/home/home.component.html
+++ b/angular-naturepoints/src/app/home/home.component.html
@@ -13,3 +13,19 @@
     </mat-card-content>
     <img mat-card-image src="images/backpacking.jpg" alt="Photo of a backpacker">
 </mat-card>
+
+<table >
+    <thead>
+      <tr>
+        <th scope="col">Email</th>
+        <th scope="col">Password</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let user of users">
+        <th scope="row">{{ user.user_id }}</th>
+        <td>{{ user.email }}</td>
+        <td>{{ user.password }}</td>
+      </tr>
+    </tbody>
+  </table>
